feat: handle changes according to updated proto
