# proto/gotocompany/compass/v1beta1/service.pb.validate.go
@@ -2557,51 +2557,9 @@ func (m *GroupAssetsRequest) validate(all bool) error {
 
 	var errors []error
 
-	_GroupAssetsRequest_Groupby_Unique := make(map[string]struct{}, len(m.GetGroupby()))
-
-	for idx, item := range m.GetGroupby() {
-		_, _ = idx, item
-
-		if _, exists := _GroupAssetsRequest_Groupby_Unique[item]; exists {
-			err := GroupAssetsRequestValidationError{
-				field:  fmt.Sprintf("Groupby[%v]", idx),
-				reason: "repeated value must contain unique items",
-			}
-			if !all {
-				return err
-			}
-			errors = append(errors, err)
-		} else {
-			_GroupAssetsRequest_Groupby_Unique[item] = struct{}{}
-		}
-
-		// no validation rules for Groupby[idx]
-	}
-
 	// no validation rules for Filter
 
-	if len(m.GetIncludeFields()) > 0 {
-
-		_GroupAssetsRequest_IncludeFields_Unique := make(map[string]struct{}, len(m.GetIncludeFields()))
-
-		for idx, item := range m.GetIncludeFields() {
-			_, _ = idx, item
-
-			if _, exists := _GroupAssetsRequest_IncludeFields_Unique[item]; exists {
-				err := GroupAssetsRequestValidationError{
-					field:  fmt.Sprintf("IncludeFields[%v]", idx),
-					reason: "repeated value must contain unique items",
-				}
-				if !all {
-					return err
-				}
-				errors = append(errors, err)
-			} else {
-				_GroupAssetsRequest_IncludeFields_Unique[item] = struct{}{}
-			}
-
-			// no validation rules for IncludeFields[idx]
-		}
+	if m.GetIncludeFields() != "" {
 
 	}
 
@@ -2858,7 +2816,39 @@ func (m *GroupAssetInfo) validate(all bool) error {
 
 	var errors []error
 
-	// no validation rules for GroupKey
+	for idx, item := range m.GetGroupFieldInfo() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, GroupAssetInfoValidationError{
+						field:  fmt.Sprintf("GroupFieldInfo[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, GroupAssetInfoValidationError{
+						field:  fmt.Sprintf("GroupFieldInfo[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GroupAssetInfoValidationError{
+					field:  fmt.Sprintf("GroupFieldInfo[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
 
 	for idx, item := range m.GetData() {
 		_, _ = idx, item
@@ -2971,6 +2961,110 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = GroupAssetInfoValidationError{}
+
+// Validate checks the field values on GroupFieldInfo with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *GroupFieldInfo) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GroupFieldInfo with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in GroupFieldInfoMultiError,
+// or nil if none found.
+func (m *GroupFieldInfo) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GroupFieldInfo) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for GroupKey
+
+	// no validation rules for GroupValue
+
+	if len(errors) > 0 {
+		return GroupFieldInfoMultiError(errors)
+	}
+
+	return nil
+}
+
+// GroupFieldInfoMultiError is an error wrapping multiple validation errors
+// returned by GroupFieldInfo.ValidateAll() if the designated constraints
+// aren't met.
+type GroupFieldInfoMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GroupFieldInfoMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GroupFieldInfoMultiError) AllErrors() []error { return m }
+
+// GroupFieldInfoValidationError is the validation error returned by
+// GroupFieldInfo.Validate if the designated constraints aren't met.
+type GroupFieldInfoValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GroupFieldInfoValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GroupFieldInfoValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GroupFieldInfoValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GroupFieldInfoValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GroupFieldInfoValidationError) ErrorName() string { return "GroupFieldInfoValidationError" }
+
+// Error satisfies the builtin error interface
+func (e GroupFieldInfoValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGroupFieldInfo.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GroupFieldInfoValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GroupFieldInfoValidationError{}
 
 // Validate checks the field values on SearchFlags with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
